Camlp4 Version 3.04+5
---------------------

- [05 Feb 02] Added a flag Plexer.no_quotations. When set to True, the
  quotations are no more lexed in all lexers built by Plexer.make ()
- [05 Feb 02] Changed the printing of options so that the option -help
  aligns correctly their documentation. One can use now Pcaml.add_option
  without having to calculate that.
- [05 Feb 02] pr_r.cmo: now the option -ncip (no comments in phrases) is
  by default, because its behaviour is not 100% sure. An option -cip has
  been added to set it.
- [03 Feb 02] Added function Stdpp.line_of_loc returning the line and
  columns positions from a character location and a file.
- [01 Feb 02] Fixed bug in token.ml: the location function provided by
  lexer_func_of_parser, lexer_func_of_ocamllex and make_stream_and_location
  could raise Invalid_argument "Array.make" for big files if the number
  of read tokens overflows the maximum arrays size (Sys.max_array_length).
  The bug is not really fixed: in case of this overflow, the returned
  location is (0, 0) (but the program does not fail).
- [28 Jan 02] Fixed bug in pa_o when parsing class_types. A horrible hack
  had to be programmed to be able to treat them correctly.
- [28 Jan 02] Fixed bug in OCaml toplevel when loading camlp4: the directives
  were not applied in the good order.
- [26 Jan 02] The printer pr_extend.cmo try now also to rebuild GEXTEND
  statements (before it tried only the EXTEND).
- [23 Jan 02] The empty functional stream "fstream [: :]" is now of type
  'a Fstream.t thanks to the new implementation of lazies allowing to
  create polymorphic lazy values.
- [11 Jan 02] Added a test in grammars using Plexer that a keyword is not
  used also as parameter of a LIDENT or a UIDENT.
- [04 Jan 02] Fixed bug in pa_sml (SML syntax): the function definitions
  with several currified parameters did not work. It works now, but the
  previous code was supposed to treat let ("fun" in SML syntax) definitions